--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@heroicons/react": "^2.0.18"
+    "@heroicons/react": "^2.0.18",
+    "sass": "^1.63.3"
   }
 }
